--- a/cats/index-cats.html
+++ b/cats/index-cats.html
@@ -1,17 +1,17 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cats</title>
     <link rel="stylesheet" href="normalize.css" />
     <link
-      href="http://fonts.googleapis.com/css?family=Inter"
+      href="http://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="public/css/index-cats.css" type="text/css" />
   </head>
   <body>
-    <div class="content">
     <header class="header container">
       <div class="header__left">
         <svg class="header__left-element" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -338,6 +338,5 @@ l<!DOCTYPE html>
         </div>
       </div>
     </main>
-  </div>
   </body>
 </html>
