--- a/figma/index.html
+++ b/figma/index.html
@@ -376,7 +376,7 @@ l<!DOCTYPE html>
             Plan and book your perfect trip with expert advice, travel tips
             destination information from us
           </p>
-          <p class="section7__left_text _text2">
+          <p class="section7__left-text _text2">
             ©2020 Thousand Sunny. All rights reserved
           </p>
         </div>
