--- a/index-onecat.html
+++ b/index-onecat.html
@@ -45,7 +45,7 @@
             fill="#332317"
           />
         </svg>
-        <p class="header__left-text">Weight Monitor</p>
+        <h1 class="header__left-text">Weight Monitor</h1>
       </div>
       <svg
         class="header__right"
@@ -62,12 +62,11 @@
       </svg>
     </header>
     <main class="main container">
-      <div class="main__content">
         <!--------Polimorf--------->
-        <div class="Cat">
-          <div class="Cat__left">
+        <div class="cat">
+          <div сlass="cat__left">
             <svg
-              class="Cat__left-img"
+              class="cat__left-img"
               width="60"
               height="60"
               viewBox="0 0 60 60"
@@ -104,9 +103,9 @@
                 fill="#C4C4C4"
               />
             </svg>
-            <div class="Cat__left-text">
+            <div class="cat__left-text">
               Polimorf
-              <div class="Cat__left-kg">
+              <div class="cat__left-kg">
                 3,5 KG
                 <svg
                   width="24"
@@ -123,10 +122,10 @@
               </div>
             </div>
           </div>
-          <div class="Cat__right">
-            <p class="Cat__right-date">08.04.2022</p>
+          <div class="cat__right">
+            <p class="cat__right-date">08.04.2022</p>
             <svg
-              class="Cat__right-animation"
+              class="cat__right-animation"
               width="24"
               height="24"
               viewBox="0 0 24 24"
@@ -145,10 +144,10 @@
           </div>
         </div>
         <!--------Pulheria--------->
-        <div class="Cat">
-          <div class="Cat__left">
+        <div class="cat">
+          <div class="cat__left">
             <svg
-              class="Cat__left-img"
+              class="cat__left-img"
               width="60"
               height="60"
               viewBox="0 0 60 60"
@@ -185,9 +184,9 @@
                 fill="#C4C4C4"
               />
             </svg>
-            <div class="Cat__left-text">
+            <div class="cat__left-text">
               Pulheria
-              <div class="Cat__left-kg">
+              <div class="cat__left-kg">
                 3,5 KG
                 <svg
                   width="24"
@@ -204,10 +203,10 @@
               </div>
             </div>
           </div>
-          <div class="Cat__right">
-            <p class="Cat__right-date">08.04.2022</p>
+          <div class="cat__right">
+            <p class="cat__right-date">08.04.2022</p>
             <svg
-              class="Cat__right-animation"
+              class="cat__right-animation"
               width="24"
               height="24"
               viewBox="0 0 24 24"
@@ -226,10 +225,10 @@
           </div>
         </div>
         <!--------Apofem--------->
-        <div class="Cat">
-          <div class="Cat__left">
+        <div class="cat">
+          <div class="cat__left">
             <svg
-              class="Cat__left-img"
+              class="cat__left-img"
               width="60"
               height="60"
               viewBox="0 0 60 60"
@@ -266,9 +265,9 @@
                 fill="#C4C4C4"
               />
             </svg>
-            <div class="Cat__left-text">
+            <div class="cat__left-text">
               Apofem
-              <div class="Cat__left-kg">
+              <div class="cat__left-kg">
                 3,5 KG
                 <svg
                   width="24"
@@ -285,10 +284,10 @@
               </div>
             </div>
           </div>
-          <div class="Cat__right">
-            <p class="Cat__right-date">08.04.2022</p>
+          <div class="cat__right">
+            <p class="cat__right-date">08.04.2022</p>
             <svg
-              class="Cat__right-animation"
+              class="cat__right-animation"
               width="17"
               height="18"
               viewBox="0 0 17 18"
@@ -306,7 +305,6 @@
             </svg>
           </div>
         </div>
-      </div>
     </main>
   </body>
 </html>
