--- a/index-onecat.html
+++ b/index-onecat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cats</title>
-    <link rel="stylesheet" href="/public/css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="/public/css/normalize.css" />
     <link
       href="http://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
@@ -64,7 +64,7 @@
     <main class="main container">
         <!--------Polimorf--------->
         <div class="cat">
-          <div сlass="cat__left">
+          <div class="cat__left">
             <svg
               class="cat__left-img"
               width="60"
