--- a/index-twocat.html
+++ b/index-twocat.html
@@ -88,6 +88,7 @@
         />
       </svg>
     </header>
+    <!-------main------->
     <main class="main container">
       <dl>
         <dt>Weight:</dt>
@@ -102,7 +103,9 @@
             <dd>Female</dd>
       </dl>
     </main>
+    <!-----footer------>
     <footer class="footer container">
+      <hr>
         <div class="footer__content">
         <div class="footer__content-left">
       <svg
