--- a/index-threecat.html
+++ b/index-threecat.html
@@ -34,9 +34,14 @@
   </header>
   <main class="main container">
     <form method="get" class="form">
-        <label>
-            <input class="form__name" type="text" name="firsName" placeholder="Name">
-        </label>
+<input class="form__style" type="text" name="firsName" placeholder="Name">
+      <select class="form__select" name="species">
+        <option value="species" disabled selected>Species</option>
+        <option>Maine coon</option>
+        <option>Munchkin</option>
+        <option>The sphinx</option>
+      </select>
+<input class="form__style _icon" type="text" name="text" placeholder="Birthday">
     </form>
   </main>
 </body>
