--- a/index-fivecat.html
+++ b/index-fivecat.html
@@ -20,10 +20,10 @@
       <h1 class="update">Update Weight</h1>
       <form method="get" class="form">
         <select class="form__select" name="weight">
-          <option value="weight" disabled selected>Weight</option>
-          <option>3,5 KG</option>
-          <option>4 KG</option>
-          <option>4,5 KG</option>
+          <option class="form__select _color" value="weight" disabled selected>Weight</option>
+          <option class="form__select _color">3,5 KG</option>
+          <option class="form__select _color">4 KG</option>
+          <option class="form__select _color">4,5 KG</option>
         </select>
         <input
           class="form__style"
