--- a/index-threecat.html
+++ b/index-threecat.html
@@ -36,10 +36,10 @@
     <form method="get" class="form">
 <input class="form__style" type="text" name="firsName" placeholder="Name">
       <select class="form__select" name="species">
-        <option value="species" disabled selected>Species</option>
-        <option>Maine coon</option>
-        <option>Munchkin</option>
-        <option>The sphinx</option>
+        <option class="form__select _color" value="species" disabled selected>Species</option>
+        <option class="form__select _color">Maine coon</option>
+        <option class="form__select _color">Munchkin</option>
+        <option class="form__select _color">The sphinx</option>
       </select>
 <input class="form__style _icon" type="text" name="text" placeholder="Birthday">
     </form>
